[package]
name = "textdecoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
encoding_rs = "0.8"
clap = "4.4"

[build-dependencies]
cxx-build = "1.0"
build-target = "0.4"

[profile.release]
strip = true
